# w-resources

./: .env.example  .gitignore  README.md  pollo_response.json  pyproject.toml  start.py
app/: main.py
app/api/: router.py
app/api/models/: APIBaseModel.py  APIResponseModel.py  DataBaseModel.py  PolloaiRequest.py  PolloaiResponseModel.py
app/api/routers/: artlist_resource.py  hailuoai_resource.py  health_check.py  klingai_resource.py  pollo_resource.py  polloai_resource.py  promeai_resource.py  seaart_resource.py  vidu_resource.py
app/crawlers/: BaseCrawler.py  README.md
app/crawlers/generative/artlist/: crawler.py
app/crawlers/generative/hailuoai/: tags.py
app/crawlers/generative/klingai/: crawler.py
app/crawlers/generative/pollo/: crawler.py  endpoints.py
app/crawlers/generative/promeai/: crawler.py  endpoints.py
app/crawlers/generative/seaart/: crawler.py  endpoints.py
app/crawlers/generative/vidu/: crawler.py  tags.py
app/crawlers/social/douyin/: abogus.py  crawler.py  manager.py  xbogus.py
app/http_client/: AsyncHttpClient.py  HttpException.py
app/services/: callback_service.py
app/utils/: logging_utils.py  serializers_utils.py
config/: settings.py
